Fixes the overlaping of the projects section

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -25,19 +25,19 @@
         line-height: 1.3rem;
     }
 
-    @media (max-width:  1312px){
-        height: 70vh;
+    // @media (max-width:  1312px){
+    //     height: 70vh;
     
-    }
+    // }
 
-    @media (max-width:  792px){
-        height: 80vh;
+    // @media (max-width:  792px){
+    //     height: 80vh;
     
-    }
-    @media (max-width:  712px){
-        height: 95vh;
+    // }
+    // @media (max-width:  712px){
+    //     height: 95vh;
     
-    }
+    // }
 
     .techStack {
         // display: flex;
